puntuaciones terminadas faltan maps

--- a/Notebooks/Cleaning.ipynb
+++ b/Notebooks/Cleaning.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85003a8d",
+   "id": "9795a6a3",
    "metadata": {
     "scrolled": true
    },
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "eead326f",
+   "id": "83f6cde0",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "a58cd847",
+   "id": "d26b129f",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "7c553766",
+   "id": "7ad85595",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3f56f768",
+   "id": "328fb841",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfbefa8a",
+   "id": "9916dfba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3285649b",
+   "id": "0a236075",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "bfadf70b",
+   "id": "4fc9082d",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "609021da",
+   "id": "9d393cda",
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "95d64878",
+   "id": "2e0759bb",
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04336e01",
+   "id": "07019085",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "49c7f7b8",
+   "id": "94957e96",
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "58ff4af8",
+   "id": "71a277a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ca553280",
+   "id": "fe7f97f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a09c78eb",
+   "id": "04bfade9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e1ea0511",
+   "id": "a4a7e809",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "4497026d",
+   "id": "ee663d74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "e90416db",
+   "id": "8ad1e5eb",
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98aca3cc",
+   "id": "ebb82876",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1267a144",
+   "id": "430d9d79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b33d8c5",
+   "id": "ddfb7f09",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0021be24",
+   "id": "e3df701e",
    "metadata": {
     "scrolled": true
    },
@@ -426,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0671322",
+   "id": "6b7efe4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "423ebdf5",
+   "id": "9c0cb8a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "7cfc310c",
+   "id": "0516e963",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "ef1efebe",
+   "id": "ed680923",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "2d142373",
+   "id": "ccbf0cf3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "98ed1cc7",
+   "id": "8dc6d573",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "993e2c70",
+   "id": "d2dc02de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "8adb7724",
+   "id": "e1f96b61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "17793014",
+   "id": "bc1fc74f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7bf983f1",
+   "id": "f882d7ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "4569363d",
+   "id": "81ba8bc3",
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +644,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "1920c3da",
+   "id": "0e956ac8",
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +665,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "84caeffd",
+   "id": "e3b9e299",
    "metadata": {},
    "outputs": [
     {
@@ -728,8 +728,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "id": "fcaeff56",
+   "execution_count": 136,
+   "id": "3566e160",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,7 +739,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "766a5161",
+   "id": "9ecff662",
    "metadata": {
     "scrolled": true
    },
@@ -809,8 +809,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
-   "id": "d96a40da",
+   "execution_count": 137,
+   "id": "b1577a2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -820,7 +820,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "985b7073",
+   "id": "5a002cf0",
    "metadata": {},
    "outputs": [
     {
@@ -881,7 +881,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "0d61a178",
+   "id": "a04966bd",
    "metadata": {},
    "outputs": [
     {
@@ -946,7 +946,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "de964f86",
+   "id": "5edfe29b",
    "metadata": {},
    "outputs": [
     {
@@ -1012,7 +1012,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "49c37c52",
+   "id": "2c0ff8ef",
    "metadata": {
     "scrolled": true
    },
@@ -1078,7 +1078,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "06131e66",
+   "id": "879eae27",
    "metadata": {
     "scrolled": true
    },
@@ -1102,8 +1102,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
-   "id": "b4aaec89",
+   "execution_count": 138,
+   "id": "3082a023",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "madrid = db.get_collection(\"madrid\")\n",
+    "san_francisco = db.get_collection(\"san_francisco\")\n",
+    "tel_aviv = db.get_collection(\"tel_aviv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "id": "7c454c04",
    "metadata": {},
    "outputs": [
     {
@@ -1121,8 +1133,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
-   "id": "3903ad28",
+   "execution_count": 140,
+   "id": "892415eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1131,8 +1143,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
-   "id": "c9c21da1",
+   "execution_count": 141,
+   "id": "e06ecc88",
    "metadata": {},
    "outputs": [
     {
@@ -1141,7 +1153,7 @@
        "'geometry_2dsphere'"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1152,8 +1164,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
-   "id": "71c64de5",
+   "execution_count": 142,
+   "id": "0911872d",
    "metadata": {
     "scrolled": true
    },
@@ -1161,10 +1173,10 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertManyResult at 0x7fb57007d3c0>"
+       "<pymongo.results.InsertManyResult at 0x7fb570072100>"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1176,7 +1188,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "4f94d7ea",
+   "id": "7e7053db",
    "metadata": {},
    "outputs": [
     {
@@ -1195,7 +1207,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "5ee4ecac",
+   "id": "9168012d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1205,7 +1217,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "038830ae",
+   "id": "b4d18b35",
    "metadata": {},
    "outputs": [
     {
@@ -1226,7 +1238,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "6607a1e3",
+   "id": "2897d506",
    "metadata": {},
    "outputs": [
     {
@@ -1247,7 +1259,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "9d7ff43a",
+   "id": "6980987c",
    "metadata": {},
    "outputs": [
     {
@@ -1266,7 +1278,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "5c1fa580",
+   "id": "01cf976b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1276,7 +1288,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "acd1d0a3",
+   "id": "0fa2179b",
    "metadata": {},
    "outputs": [
     {
@@ -1297,7 +1309,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "7cba6726",
+   "id": "1643a8ce",
    "metadata": {},
    "outputs": [
     {
